--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -1,6 +1,7 @@
 # syntax=docker/dockerfile:1
 
-FROM golang:1.19
+FROM golang:1.19 AS builder
+
 
 # Set destination for COPY
 WORKDIR /app
@@ -12,14 +13,11 @@ RUN go mod download
 # Copy the source code
 COPY . .
 
-# Build
+
 RUN CGO_ENABLED=0 GOOS=linux go build -o /docker-gs-ping ./cmd/exhibition
 
-# Optional:
-# To bind to a TCP port, runtime parameters must be supplied to the docker command.
-# But we can document in the Dockerfile what ports
-# the application is going to listen on by default.
-# https://docs.docker.com/engine/reference/builder/#expose
+FROM node:16-alpine
+
 EXPOSE 8080
 
 # Run
