--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -2,7 +2,6 @@
 
 FROM golang:1.19 AS builder
 
-
 # Set destination for COPY
 WORKDIR /app
 
@@ -13,12 +12,14 @@ RUN go mod download
 # Copy the source code
 COPY . .
 
-
-RUN CGO_ENABLED=0 GOOS=linux go build -o /docker-gs-ping ./cmd/exhibition
+RUN CGO_ENABLED=0 GOOS=linux go build -o /my-exhibition-app ./cmd/exhibition
 
 FROM node:16-alpine
 
 EXPOSE 8080
 
+# Copy the binary from the builder stage
+COPY --from=builder /my-exhibition-app /my-exhibition-app
+
 # Run
-CMD ["/docker-gs-ping"]
+CMD ["/my-exhibition-app"]
