--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /app
 # Download Go modules
 COPY go.mod go.sum ./
 RUN go mod download
+COPY .env /app/.env
 
 # Copy the source code
 COPY . .
