--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       dockerfile: ./dockerfile/Dockerfile
     ports:
       - '8080:8080'
+    env_file:
+      - .env
     networks:
       - atommuse-network
 
