--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://admin:root123456@cluster0.eshkyjb.mongodb.net/
+MONGO_URI_COMMENT=mongodb+srv://admin:root123456@atommuse.r0cpp14.mongodb.net/?retryWrites=true&w=majority&appName=atommuse
 secret_key="LCRFiU3ahh-vTLmRF9HbkcjxGA-ty1y4"
